[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/player/player.gd" type="Script" id=1]
[ext_resource path="res://assets/player/textures/characters/customizable/06-right-leg/brown-suit.png" type="Texture" id=2]
[ext_resource path="res://assets/player/textures/characters/customizable/10-face-wear/glasses.png" type="Texture" id=3]
[ext_resource path="res://assets/player/textures/characters/customizable/02-body/body01.png" type="Texture" id=4]
[ext_resource path="res://assets/player/textures/characters/customizable/04-left-leg/brown-suit.png" type="Texture" id=5]
[ext_resource path="res://assets/player/textures/characters/customizable/11-hat-hair/brown-hat.png" type="Texture" id=6]
[ext_resource path="res://assets/player/textures/characters/customizable/01-left-arm/brown-suit.png" type="Texture" id=7]
[ext_resource path="res://assets/player/textures/characters/customizable/09-facial-hair/brown-eyebrows-sideburns.png" type="Texture" id=8]
[ext_resource path="res://assets/player/textures/characters/customizable/03-mouth/mouth-smile.png" type="Texture" id=9]
[ext_resource path="res://assets/player/textures/characters/customizable/08-right-arm/brown-suit.png" type="Texture" id=10]
[ext_resource path="res://assets/player/textures/characters/customizable/07-clothes/brown-suit.png" type="Texture" id=11]
[ext_resource path="res://assets/player/textures/characters/customizable/05-pants/brown-suit.png" type="Texture" id=12]
[ext_resource path="res://assets/common/shaders/outline.shader" type="Shader" id=13]
[ext_resource path="res://assets/player/viewport_render_target.gd" type="Script" id=14]
[ext_resource path="res://assets/player/textures/light.png" type="Texture" id=15]
[ext_resource path="res://assets/player/interactarea.gd" type="Script" id=16]

[sub_resource type="CircleShape2D" id=1]
radius = 100.0

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 2

[sub_resource type="CapsuleShape2D" id=3]
radius = 12.0

[sub_resource type="CanvasItemMaterial" id=4]
light_mode = 2

[sub_resource type="Animation" id=5]
resource_name = "Idle"

[sub_resource type="Animation" id=6]
resource_name = "h_move"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("04-l-leg:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 0.5, 2, 0.5, 2 ),
"update": 0,
"values": [ 0.0, -20.0, 0.0, 5.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("06-r-leg:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 0.5, 2, 0.5, 2 ),
"update": 0,
"values": [ 0.0, 5.0, 0.0, -20.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("08-r-arm:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 0.5, 2, 0.5, 2 ),
"update": 0,
"values": [ 0.0, 30.0, 0.0, -30.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("01-l-arm:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 0.5, 2, 0.5, 2 ),
"update": 0,
"values": [ 0.0, -30.0, 0.0, 30.0 ]
}

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 13 )
shader_param/line_color = Color( 1, 0, 0, 0 )
shader_param/line_thickness = 15.0

[sub_resource type="ViewportTexture" id=8]
viewport_path = NodePath("SpritesViewportContainer/SpritesViewport")

[node name="Player" type="KinematicBody2D" groups=[
"players",
]]
collision_layer = 2
script = ExtResource( 1 )

[node name="interactarea" type="Area2D" parent="."]
position = Vector2( 0, -20 )
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
collision_layer = 0
collision_mask = 16
script = ExtResource( 16 )

[node name="RayCast2D" type="RayCast2D" parent="interactarea"]
enabled = true
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactarea"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
material = SubResource( 2 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="MainLight" type="Light2D" parent="."]
position = Vector2( 0, -0.198425 )
texture = ExtResource( 15 )
texture_scale = 2.0
mode = 2
shadow_enabled = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.65
drag_margin_top = 0.65
drag_margin_right = 0.65
drag_margin_bottom = 0.65

[node name="SpritesViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Container for SpritesViewport, stretched to fit screen dimensions."
}

[node name="SpritesViewport" type="Viewport" parent="SpritesViewportContainer"]
size = Vector2( 3840, 2160 )
transparent_bg = true
handle_input_locally = false
msaa = 4
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 3
__meta__ = {
"_editor_description_": "Viewport where player sprites will be drawn and then rendered to ViewportRenderTarget.

Size is 4K so that large sprites fit within the viewport and are drawn entirely."
}

[node name="ViewportCamera" type="Camera2D" parent="SpritesViewportContainer/SpritesViewport"]
position = Vector2( -3.24713e-05, 371.429 )
rotation = -3.14159
scale = Vector2( 14.2857, -14.2857 )
current = true
__meta__ = {
"_editor_description_": "A camera is necessary for the viewport to be drawn."
}

[node name="Label" type="Label" parent="."]
material = SubResource( 4 )
margin_left = -248.0
margin_top = -88.0
margin_right = 252.0
margin_bottom = -66.0
text = "Pog"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spritecollection" type="Node2D" parent="."]
position = Vector2( 0, -24 )
scale = Vector2( 0.07, 0.07 )
__meta__ = {
"_editor_description_": "Sprites must be large or result of render target will be pixelated."
}

[node name="01-l-arm" type="Sprite" parent="spritecollection"]
position = Vector2( 110, 120 )
texture = ExtResource( 7 )
offset = Vector2( -110, -120 )

[node name="02-body" type="Sprite" parent="spritecollection"]
texture = ExtResource( 4 )

[node name="03-mouth" type="Sprite" parent="spritecollection"]
texture = ExtResource( 9 )

[node name="04-l-leg" type="Sprite" parent="spritecollection"]
position = Vector2( 80, 280 )
texture = ExtResource( 5 )
offset = Vector2( -80, -280 )

[node name="05-pants" type="Sprite" parent="spritecollection"]
texture = ExtResource( 12 )

[node name="06-r-leg" type="Sprite" parent="spritecollection"]
position = Vector2( -60, 280 )
texture = ExtResource( 2 )
offset = Vector2( 60, -280 )

[node name="07-clothes" type="Sprite" parent="spritecollection"]
texture = ExtResource( 11 )

[node name="08-r-arm" type="Sprite" parent="spritecollection"]
position = Vector2( -90, 120 )
texture = ExtResource( 10 )
offset = Vector2( 90, -120 )

[node name="09-r-facial-hair" type="Sprite" parent="spritecollection"]
texture = ExtResource( 8 )

[node name="10-face-wear" type="Sprite" parent="spritecollection"]
texture = ExtResource( 3 )

[node name="11-hat-hair" type="Sprite" parent="spritecollection"]
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="spritecollection"]
anims/Idle = SubResource( 5 )
anims/h_move = SubResource( 6 )

[node name="ViewportRenderTarget" type="Sprite" parent="."]
material = SubResource( 7 )
position = Vector2( 0, -24 )
scale = Vector2( 0.07, 0.07 )
texture = SubResource( 8 )
script = ExtResource( 14 )
__meta__ = {
"_editor_description_": "The target of SpritesViewport's render texture."
}
[connection signal="body_entered" from="interactarea" to="interactarea" method="_on_interactarea_body_entered"]
[connection signal="body_exited" from="interactarea" to="interactarea" method="_on_interactarea_body_exited"]
